--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,7 +10,7 @@ sudo pacman-key --populate archlinux rebornos
 sudo pacman -Syy
 sudo cnchi-start.sh
 
-File modified to:
+File modified to (desktop file rebornos-welcome changed to rebornos-iso-welcome):
 
 gsettings set org.gnome.shell favorite-apps "['firefox.desktop', 'org.gnome.Nautilus.desktop', 'org.gnome.gedit.desktop', 'gparted.desktop', 'rebornos-install.desktop', 'rebornos-install-2.desktop', 'rebornos-iso-welcome.desktop', 'org.gnome.Terminal.desktop']"
 sudo systemctl enable --now NetworkManager.service
