--- a/CHANGELOG
+++ b/CHANGELOG
@@ -43,5 +43,5 @@ sudo chmod 644 /etc/pacman.conf
 sudo chmod 0777 /usr/share/cnchi/scripts/ckbcomp
 sudo -E /usr/bin/python -Wall /usr/share/cnchi/src/cnchi.py -dvz --no-check --packagelist /usr/share/cnchi/data/packages.xml
 
-
+Folder /home/rebornos/.rebornos-welcome deleted
 
